[package]
name = "softbuffer_experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
softbuffer = "0.1.1"
winit = "0.27.5"

[patch.crates-io]
softbuffer = { git = 'https://github.com/rust-windowing/softbuffer' }
